fixed footer alignment

--- a/css/about-styles.css
+++ b/css/about-styles.css
@@ -44,9 +44,14 @@ body {
   margin-top: 2em;
 }
 
+.social {
+  padding: 0;
+}
+
 .social > li {
+  padding: 0;
   display: inline-block;
-  padding: o;
+  text-align: center;
 }
 
 .introduction-section > p,
